[package]
name = "card_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = {version = "0.10.0", features =["reqwest"]}
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
reqwest = "0.11.9"
lazy_static = "1.4.0"
async-trait = "0.1.52"
chrono = {version = "0.4.19", features = ["serde"]}