[package]
name = "gui-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.3.0", features = ["tokio"]}
iced_native = "0.4.0"
iced_futures = "0.3.0"
graphql_client = {version = "0.10.0", features =["reqwest"]}
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
reqwest = "0.11.10"
lazy_static = "1.4.0"
async-trait = "0.1.53"
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
toml = "0.5.8"